# QHttpServer

./: CMakeLists.txt  api_controller.cpp  api_controller.h  clean-build.sh  main.cpp  server.cpp  server.h
assets/: certificate.crt  private.key
